# r-a-t

./: .clang-complete  .clang-format  .gitignore  .syntastic_cppcheck_config  CMakeLists.txt  ProjectHome.md  atmine.pro
case/: abstractgraph.cpp  abstractgraph.h  case.pro
cmake/: AtmineConfig.cmake
common/: CMakeLists.txt  atmineconfiguration.cpp  atmineconfiguration.h  atmprogress.h  basenode.cpp  basenode.h  common.h  common.pro  emptyprogress.h  letternode.cpp  letternode.h  letters.h  node.cpp  node.h  resultnode.cpp  resultnode.h  sarf.cpp  sarf.h
common/tests/: test_letters.cpp  test_letters.h  test_main.cpp
config/: config.pri
doc/: DEFINES  README
engine/: CMakeLists.txt  sarf.cpp  sarf.h
engine/tests/: test_main.cpp  test_sarf.cpp  test_sarf.h
model/: CMakeLists.txt  letternode.cpp  model.h  model.pro  node.cpp  node.h  rawdata.hpp  resultnode.cpp  resultnode.h
model/tests/: test_letternode.cpp  test_main.cpp  test_node.cpp  test_node_binary_search.cpp  test_node_extensive_tree.cpp  test_node_extensive_tree.h  test_node_hash_table.cpp  test_node_hash_table.h  test_rawdata.cpp  test_rawdata.h  test_resultnode_default.cpp  test_resultnode_reduce_thru_diacritics.cpp  test_resultnode_reduce_thru_diacritics.h
sql/: CMakeLists.txt  mysqlmanager.cpp  mysqlmanager.h  sql.pro  sqlmanager.cpp  sqlmanager.h
sql/tests/: test_main.cpp  test_sqlmanager.cpp  test_sqlmanager.h
test_common/: test_common.pro  test_letternode.cpp  test_letternode.h  test_main.cpp  test_node.cpp  test_node_binary_search.h  test_node_extensive_tree.cpp  test_node_extensive_tree.h
test_model/: test_letternode.cpp  test_letternode.h  test_main.cpp  test_model.pro  test_node.cpp  test_node.h  test_node_extensive_tree.cpp  test_resultnode.cpp  test_resultnode.h  test_resultnode_default.cpp  test_resultnode_default.h  test_resultnode_reduce_thru_diacritics.h
test_sql/: test_main.cpp  test_sql.pro
